logs/dag_id=create_and_populate_taxigov_datawarehouse/run_id=manual__2022-08-28T23:17:20.028990+00:00/task_id=create_dim_rides_table/attempt=1.log
[2022-08-28 23:17:25,756] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: create_and_populate_taxigov_datawarehouse.create_dim_rides_table manual__2022-08-28T23:17:20.028990+00:00 [queued]>
[2022-08-28 23:17:25,763] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: create_and_populate_taxigov_datawarehouse.create_dim_rides_table manual__2022-08-28T23:17:20.028990+00:00 [queued]>
[2022-08-28 23:17:25,764] {taskinstance.py:1376} INFO - 
--------------------------------------------------------------------------------
[2022-08-28 23:17:25,764] {taskinstance.py:1377} INFO - Starting attempt 1 of 1
[2022-08-28 23:17:25,764] {taskinstance.py:1378} INFO - 
--------------------------------------------------------------------------------
[2022-08-28 23:17:25,775] {taskinstance.py:1397} INFO - Executing <Task(PostgresOperator): create_dim_rides_table> on 2022-08-28 23:17:20.028990+00:00
[2022-08-28 23:17:25,777] {standard_task_runner.py:52} INFO - Started process 2404 to run task
[2022-08-28 23:17:25,779] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'create_and_populate_taxigov_datawarehouse', 'create_dim_rides_table', 'manual__2022-08-28T23:17:20.028990+00:00', '--job-id', '97', '--raw', '--subdir', 'DAGS_FOLDER/create_and_populate_taxigov_datawarehouse_dag.py', '--cfg-path', '/tmp/tmp8eodolh1', '--error-file', '/tmp/tmp1nhyxlhd']
[2022-08-28 23:17:25,779] {standard_task_runner.py:80} INFO - Job 97: Subtask create_dim_rides_table
[2022-08-28 23:17:25,820] {task_command.py:371} INFO - Running <TaskInstance: create_and_populate_taxigov_datawarehouse.create_dim_rides_table manual__2022-08-28T23:17:20.028990+00:00 [running]> on host ddc8002727e0
[2022-08-28 23:17:25,872] {taskinstance.py:1591} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=create_and_populate_taxigov_datawarehouse
AIRFLOW_CTX_TASK_ID=create_dim_rides_table
AIRFLOW_CTX_EXECUTION_DATE=2022-08-28T23:17:20.028990+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-08-28T23:17:20.028990+00:00
[2022-08-28 23:17:25,883] {base.py:68} INFO - Using connection ID 'redshift_default' for task execution.
[2022-08-28 23:17:27,421] {dbapi.py:231} INFO - Running statement: 
    DROP TABLE IF EXISTS dim_rides;

    CREATE TABLE IF NOT EXISTS dim_rides AS 
        SELECT
            TO_HEX(
                SHA2(
                    qru_corrida,
                    256
                )
            ) AS id,
            TO_HEX(
                SHA2(
                    CONCAT(
                        CAST(data_abertura AS STRING), 
                        nome_orgao
                    ),
                    256
                )
            ) AS request_id
            data_inicio AS started_at,
            data_final AS ended_at,
            origem_latitude AS pickup_latitude,
            origem_longitude AS pickup_longitude,
            destino_efetivo_latitude AS dropoff_latitude,
            destino_efetivo_longitude AS dropoff_longitude,
            km_total AS distance,
            valor_corrida AS cost
        FROM
            raw__taxigov_corridas;, parameters: None
[2022-08-28 23:17:27,887] {taskinstance.py:1909} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 211, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 235, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "AS"
LINE 4:     CREATE TABLE IF NOT EXISTS dim_rides AS 
                                                 ^

[2022-08-28 23:17:27,895] {taskinstance.py:1420} INFO - Marking task as FAILED. dag_id=create_and_populate_taxigov_datawarehouse, task_id=create_dim_rides_table, execution_date=20220828T231720, start_date=20220828T231725, end_date=20220828T231727
[2022-08-28 23:17:27,904] {standard_task_runner.py:97} ERROR - Failed to execute job 97 for task create_dim_rides_table (syntax error at or near "AS"
LINE 4:     CREATE TABLE IF NOT EXISTS dim_rides AS 
                                                 ^
; 2404)
[2022-08-28 23:17:27,958] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-08-28 23:17:27,981] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
